kotlin/semlang-parser/src/test/semlang/validatorTests/fail/functionBinding3.sem
function myStuff.myFunction(): () -> Integer {
  // Too many arguments
  Integer.plus|(Integer."1", Integer."2", Integer."3")
}
